# Alloy

./: .gitignore  Cargo.toml  README.md
artifacts/contracts/ERC20.sol/: ERC20.json
artifacts/contracts/MultiSig.sol/: MultiSig.json
src/: main.rs
src/utils/: dtos.rs  mod.rs  sol_to_ts_mapper.rs  util.rs
types/: ERC20AbiTypes.ts  GovernanceTokenAbiTypes.ts  MultiSigAbiTypes.ts  TokenAbiTypes.ts  VaultAbiTypes.ts
